[project]
name = "highlambder"
version = "0.1.0"
description = "lambda with some syntactic sugar"
authors = [
    { name="Dario Colombotto", email="dario.colombotto@outlook.com" }
]
readme = "README.md"
license = { text = "MIT" }
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
